# vgi-sympy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml  sympy_worker.py
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: cas.test  security.test
tests/: test_cas.py  test_scalars.py
vgi_sympy/: __init__.py  cas.py  scalars.py  worker.py
