[project]
name = "vgi-sympy"
version = "0.1.0"
description = "Symbolic math (CAS) -- simplify/solve/differentiate/integrate/factor -- for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "sympy",
    "symbolic-math",
    "cas",
    "calculus",
    "algebra",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.8.3",
    "sympy>=1.13",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_sympy"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
