[project]
name = "vgi-sympy"
version = "0.1.0"
description = "Symbolic math (CAS) -- simplify/solve/differentiate/integrate/factor -- for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "sympy",
    "symbolic-math",
    "cas",
    "calculus",
    "algebra",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python[http]>=0.8.4",
    "sympy>=1.13",
    "pyarrow",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`sympy_worker.py --http`) in
# addition to stdio. That path needs vgi-python's `http` extra (waitress). CI's
# http transport leg installs this via `uv sync --extra http`. (The main
# dependency already pins `vgi-python[http]`, so a plain sync also pulls it; this
# explicit extra keeps the `--extra http` install knob the CI job uses.)
http = [
    "vgi-python[http]>=0.8.4",
]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_sympy"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["sympy.*"]
ignore_missing_imports = true
